// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

// Required by protoc-gen-go
option go_package = "infra/libs/fleet/protos/go";

message MachineID {
    // A unique ID for machine:
    //   * AssetTag for ChromeOS machine (device)
    //   * Serial number for Chrome machine (server)
    string value = 1;
}